Day2/declarative-manifests/spring-ms-clusterip-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-ms
  name: spring-ms
  namespace: jegan
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: spring-ms
  type: ClusterIP
