Day2/declarative-manifests/spring-ms-nodeport-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-ms
  name: spring-ms
  namespace: jegan
spec:
  ports:
  - nodePort: 30085
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: spring-ms
  type: NodePort
