Day2/declarative-manifests/spring-ms-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-ms
  name: spring-ms
  namespace: jegan
spec:
  host: spring-ms-jegan.apps.tektutor.tektutor.org
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-ms
    weight: 100
  wildcardPolicy: None
